Fixes white font when dark mode on the popup

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -68,13 +68,16 @@
   font-size: larger;
   font-weight: bold;
   margin-bottom: 20px;
+  color: black;
 }
 
 .disclaimerText {
   font-size: medium;
   text-align: left;
   margin-bottom: 20px;
+  color: black;
 }
+
 
 @media screen and (max-width: 996px) {
   .heroBanner {
